--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "server": "nodemon server.js",
     "myapp": "npm start --prefix ./myapp",
     "dev": "concurrently \"npm run start\" \"npm run myapp\""
