--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "myapp": "npm start --prefix ./myapp",
-    "dev": "concurrently \"npm run server\" \"npm run myapp\""
+    "dev": "concurrently \"npm run start\" \"npm run myapp\""
   },
   "keywords": [],
   "author": "",
